# guestkit

./: .dockerignore  .gitignore  ARCHITECTURE.md  CRATES-PUBLISHED.md  Cargo.toml  Cargo.toml.workspace  DOCKER-BUILD-FIX-SUMMARY.md  DOCS-ORGANIZATION-SUMMARY.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  NOTICE  README.md  RELEASE-0.1.0.md  RPM-BUILD.md  SECURITY.md  ZYVOR-COMPANY-TERMS.md  docker-compose.yml  docker-entrypoint.sh  guestkit-full.spec  guestkit.spec  install.sh  pyproject.toml
.github/: RELEASE_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: agent-release.yml  build-wheels.yml  ci.yml  integration-tests.yml  k3s-e2e.yml  publish-zyvor-images.yml  release.yml  rpm.yml
benches/: benchmarks.rs  operations.rs  performance.rs
crates/guestkit-agent-protocol/: Cargo.toml
crates/guestkit-agent-protocol/src/: capabilities.rs  error.rs  frame.rs  guest_info.rs  health.rs  heartbeat.rs  lib.rs  rpc.rs  telemetry.rs
crates/guestkit-job-spec/: Cargo.toml  README.md
crates/guestkit-worker/: Cargo.toml  Dockerfile  README.md
crates/zyvor-api/: Cargo.toml  Dockerfile
crates/zyvor-api/src/: config.rs  db.rs  error.rs  guest_action_policy.rs  guest_actions.rs  guest_agent_ca.rs  guest_agent_mtls.rs  guest_agent_vm.rs  guest_remediation_auth.rs  jobs.rs  kubevirt_apply.rs  kubevirt_boot_inspect.rs  kubevirt_copilot.rs  kubevirt_export.rs  kubevirt_guest_agent.rs  kubevirt_guest_cr.rs  kubevirt_guest_intel.rs  kubevirt_guest_pull.rs  kubevirt_inspect.rs  kubevirt_lifecycle.rs  kubevirt_qga.rs  kubevirt_vmtools_ops.rs  lib.rs  main.rs  models.rs  packetwolf_correlate.rs  packetwolf_fleet.rs  state.rs  vmtools_bundle.rs
crates/zyvor-api/src/auth/: jwt.rs  middleware.rs  mod.rs  oidc.rs  rbac.rs  revoke.rs  saml.rs  store.rs  types.rs
crates/zyvor-api/src/guest_control/: capabilities.rs  doctor.rs  envelope.rs  install.rs  mod.rs  polling.rs  routes.rs  transport.rs
crates/zyvor-api/src/routes/: agent.rs  auth.rs  config.rs  copilot.rs  guest_agent.rs  health.rs  jobs.rs  kubevirt.rs  mod.rs  packetwolf.rs  settings.rs  storage.rs  system.rs  vms.rs  vmtools.rs
crates/zyvor-guest-agent/: Cargo.toml
crates/zyvor-guest-agent/src/: ctl_main.rs  daemon.rs  exec_main.rs  handler.rs  main.rs  service.rs
deploy/: README.md  docker-compose.ghcr.yml  docker-compose.prod.example.yml
deploy/crd/: zeus-guest-action-policy.yaml  zeus-vmtools.yaml
deploy/examples/: agent-policy-self-update.yaml  guest-action-policy-approval.yaml  guest-action-policy-default.yaml  packetwolf-correlation.yaml
deploy/migrations/: 001_init.sql
deploy/openapi/: zyvor-vm-services.yaml
deploy/scripts/: ci-k3s-e2e.sh  deploy-remote-k3s.sh  e2e-agent-live.sh  e2e-photon-k3s.sh  e2e-smoke.sh  e2e-ubuntu-k3s.sh  install-k3s-ubuntu.sh  kind-kubevirt-quickstart.sh  publish-images.sh  publish-vmtools-bundle.sh  sync-ironwolf-theme.sh
deploy/ui/: Dockerfile  abyss-components.css  abyss-shell.css  abyss-tokens.css  app.js  carbon-shell.css  carbon-tokens.css  guestkit-ai.js  guestkit-auth.js  guestkit-console.js  guestkit-features.js  guestkit-journey.js  guestkit-nebula.js  guestkit-ux.js  index.html  ironwolf-components.css  ironwolf-overrides.css  ironwolf-shell.css  ironwolf-tokens.css  login.html  nebula-components.css  nebula-shell.css  nebula-tokens.css  nginx.conf  phosphor-shell.css  phosphor-tokens.css  solaris-shell.css  solaris-tokens.css  style.css
docs/: CLIENT_BUNDLE_POLICY.md  FUTURE-ENHANCEMENTS.md  INDEX.md  INDUSTRY_USE_CASES.md  PACKAGE_BINARY_REMOTE.md  README.md  USER_STORIES.md  WORKER-INDEX.md  ce-vs-enterprise.md  guestkit-customer-feature-guide.html  guestkit-customer-feature-guide.md  job-protocol-readme.md  systemd-analysis.md  zyvor-enterprise.md
docs/api/: ergonomic-design.md  migration-guide.md  python-reference.md  rust-reference.md
docs/architecture/: comparison-guide.md  overview.md  ux-design.md
docs/client-presentations/: 01-guestkit-overview.html  02-guestkit-architecture.html  03-guestkit-deployment.html  README.md
docs/commands/: BLUEPRINT.md  LICENSE.md
docs/development/: CHANGELOG.md  COMMANDS_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_ENHANCEMENTS.md  DOCUMENTATION_UPDATE_SUMMARY.md  NEXT_ENHANCEMENTS.md  Q1-2026-IMPLEMENTATION-START.md  RPM-BUILD.md  ai-guest-agent-roadmap.md  async-api-status.md  enhancement-roadmap.md  enhancement-status.md  enhancements-implemented.md  improvements-log.md  next-enhancements.md  next-steps.md  performance-baseline.md  performance-validation.md  publishing.md  q1-2026-medium-term.md  quick-priorities.md  roadmap-2026.md  roadmap.md  tui-development-plan.md
docs/features/: INVENTORY_USAGE.md  export-formats.md  fix-plans.md  guest-agent.md  guest-control-fabric.md  guestkit-agent-protocol-1.3.md  (+7 more)
examples/: command_and_archive.rs  convert_disk.rs  create_disk_fluent.rs  detect_format.rs  disk_forensics.rs  fluent_api.rs  inspect_os_typed.rs  inspect_vm.rs  lvm_luks_demo.rs  mount_and_explore.rs  podman_clone_test.rs  retry_example.rs  system_info.rs  vm_clone_prep.rs
k8s/: README.md
scripts/: analyze-performance.sh  build-linux-bundle.sh  build-linux-release.sh  build-windows-bundle.sh  deploy-remote.sh  deploy-to-k3d.sh  package-binary-release.sh  package-binary-remote.sh  profile-flamegraph.sh  rebuild-all-customer-tarballs-remote.sh  selftest.sh  test-customer-e2e-remote.sh  test-feature-matrix-remote.sh  test-feature-matrix.sh  test-packages-remote-only.sh  test_pypi_build.sh  track-performance.sh  validate-performance.sh
src/: enterprise_cta.rs  lib.rs  main.rs  python.rs
tests/: agent_heartbeat_push.rs  agent_integration.rs  arch_realistic.rs  assurance_integration.rs  cli_guestctl_test.rs  debian_realistic.rs  integration_basic.rs  integration_error_handling.rs  integration_lvm_luks.rs  output_formats_test.rs  panic_safety.rs  performance_validation.rs  phase3_comprehensive.rs  phase3_windows.rs  registry_write.rs  security_tests.rs  test_license.rs  ubuntu_realistic.rs  windows_realistic.rs
(+512 files in other folders)
