[package]
name = "guestkit-agent-protocol"
version = "0.1.0"
edition = "2021"
authors = ["ZyvorAI Labs Private Limited <ssahani@gmail.com>"]
license = "LGPL-3.0-or-later"
description = "JSON-RPC protocol types for the GuestKit in-guest agent"
repository = "https://github.com/hypersdk/guestkit"
keywords = ["virtualization", "vm", "agent", "jsonrpc"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"
