[workspace]

[package]
name = "zyvor-api"
version = "0.1.0"
edition = "2021"
authors = ["ZyvorAI Labs Private Limited <info@zyvor.dev>"]
license = "Apache-2.0"
description = "Zyvor VM Services API gateway for Kubernetes"

[[bin]]
name = "zyvor-api"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
guestkit = { path = "../..", default-features = false, features = ["guest-inspect"] }
guestkit-job-spec = { path = "../guestkit-job-spec" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
