[workspace]

[package]
name = "zyvor-api"
version = "0.1.0"
edition = "2021"
authors = ["ZyvorAI Labs Private Limited <info@zyvor.dev>"]
license = "Apache-2.0"
description = "Zyvor VM Services API gateway for Kubernetes"

[[bin]]
name = "zyvor-api"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
guestkit = { path = "../..", default-features = false, features = ["guest-inspect", "cloud-s3", "cloud-gcs"] }
guestkit-agent-protocol = { path = "../guestkit-agent-protocol" }
guestkit-job-spec = { path = "../guestkit-job-spec" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
kube = { version = "0.98", features = ["runtime", "ws"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }
base64 = "0.22"
http = "1"
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"
url = "2"
urlencoding = "2"
quick-xml = "0.37"
flate2 = "1"
openssl = "0.10"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
tower = "0.5"

[dev-dependencies]
tempfile = "3"
