[package]
name = "zyvor-guest-agent"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Zeus VM Tools in-guest agent (Windows + Linux)"

[[bin]]
name = "zyvor-guest-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
guestkit-agent-protocol = { path = "../guestkit-agent-protocol" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
